--- a/software.html
+++ b/software.html
@@ -39,20 +39,36 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=owmK8fwu&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=nyPZmMwZ'>Gigamon Careers - Senior Staff Software Engineer - User Interface</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698358828-senior-software-engineer-ferries-m-f-d-'>Omio Senior Software Engineer - Ferries (m / f / d) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Playtech/743999698356943-software-engineer-006253-'>Playtech Software Engineer [006253] | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Kyiv, Ukraine</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698356784-senior-software-engineer-backend-coverage-connection-excellence-team-m-f-d-'>Omio Senior Software Engineer - Backend/ Coverage/ Connection Excellence Team (m / f / d) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Berlin, Germany</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qXJ9Vfwu&k=Job&j=oFd28fwM&__jvst=Employee&__jvsd=sdf6Wiwh&__jvsc=Twitter&bid=n5UYmMwA'>Forescout Technologies Inc. Careers - Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=o6S7afwZ&__jvst=Employee+Referral&__jvsd=sfhI7fw5&__jvsc=Twitter&bid=nVRYmMwn'>Cirrus Logic Careers - Spring Intern - Software Engineering</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiFvafwm&__jvst=Employee+Referral&__jvsd=sgklXhwE&__jvsc=Twitter&bid=n0LYmMwm'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=oVifafwm&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=nNMYmMwa'>Align Technology Careers - Senior 3D C++ Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Raleigh , North Carolina</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/twitch/jobs/4491130002'>Job Application for Software Engineer at Twitch</a></h5> 
@@ -71,7 +87,7 @@
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KSMConsulting/743999698268692-senior-net-software-developer'>KSM Consulting Senior .NET Software Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/KSMConsulting/743999698268692-senior-net-software-developer'>KSM Consulting Senior .NET Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -171,7 +187,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/d2pkd7SUGO/Software-DeveloperJavaPythonNetwork'>Software Developer(Java/Python+Network) - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/d2pkd7SUGO/Software-DeveloperJavaPythonNetwork'>Software Developer(Java/Python+Network) - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -215,7 +231,7 @@
 <p><span class="badge badge-light">Melbourne Australia</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1930866'>Job Application for Senior Software Engineer, Intelligence Platform at Sony Interactive Entertainment PlayStation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1930866'>Job Application for Senior Software Engineer, Intelligence Platform at Sony Interactive Entertainment PlayStation</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -249,7 +265,7 @@
 <p><span class="badge badge-light">Leeds, England, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://ten10.recruiterbox.com/jobs/fk03ic9/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ten10.recruiterbox.com/jobs/fk03ic9/'>
     Software Developer in Test/SDET at Ten10
 </a></h5> 
 <p><span class="badge badge-light">Leeds, England, United Kingdom</span></p>
@@ -295,7 +311,7 @@
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/wepay/98a7181a-052a-4e45-a2b4-0a4518019d5c'>WePay - Software Engineer, Intern (Summer 2020)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wepay/98a7181a-052a-4e45-a2b4-0a4518019d5c'>WePay - Software Engineer, Intern (Summer 2020)</a></h5> 
 <p><span class="badge badge-light">Redwood City, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -323,7 +339,7 @@
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/stacksports/jobs/1936220'>Job Application for Senior Software Engineer at Stack Sports  </a></h5> 
+<h5><a href='https://boards.greenhouse.io/stacksports/jobs/1936220'>Job Application for Senior Software Engineer at Stack Sports  </a></h5> 
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -399,7 +415,7 @@
 <p><span class="badge badge-light">San Diego, California  Santa Clara, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://smartmicro.join.com/jobs/459242-software-engineer-m-f-d'>Job @ smartmicro (Brunswick): Software Engineer (m... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartmicro.join.com/jobs/459242-software-engineer-m-f-d'>Job @ smartmicro (Brunswick): Software Engineer (m... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -427,22 +443,6 @@
 <hr/>
 <h5><a href='https://jobs.jobvite.com/align-tech/job/oyqmbfwf'>Align Technology Careers - Expert Software Developer</a></h5> 
 <p><span class="badge badge-light">Raleigh , North Carolina</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999698306996-sr-c-software-engineer'>4Catalyzer Sr. C++ Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">New York, NYUnited States</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oCZT9fwn&__jvst=Employee&__jvsd=sep77gwC&__jvsc=Twitter&bid=nArhmMwV'>Schneider Electric NAM Careers - Software Developer, Software Innovation Center</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qLHaVfwh&k=Job&j=oTPfbfwS&__jvst=Employee&__jvsd=syFcciwo&__jvsc=Twitter&bid=nhghmMwr'>Egnyte Careers - Senior Software Engineer - Cloud</a></h5> 
-<p><span class="badge badge-light">Raleigh, North Carolina</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.crelate.com/portal/sundial/job/ujzp3fzoq45p58uobgxwifhm4c'>Sr. Software Developer | Sundial Software Career Opportunities</a></h5> 
-<p><span class="badge badge-light">Madison, WI</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 
