--- a/deep-learning.html
+++ b/deep-learning.html
@@ -146,7 +146,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://b10.recruitee.com/o/junior-applied-deeplearning-mfd-signatrix'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://b10.recruitee.com/o/junior-applied-deeplearning-mfd-signatrix'>
       Junior Applied Deep-Learning (m/f/d) | Signatrix - b10
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -171,7 +171,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aluperf.referrals.selectminds.com/jobs/bell-labs-internship-mobility-robustness-optimization-through-deep-reinforcement-learning-36253'>Bell Labs Internship - Mobility Robustness Optimization through Deep Reinforcement Learning - Nokia Careers</a></h5> 
+<h5><a href='https://aluperf.referrals.selectminds.com/jobs/bell-labs-internship-mobility-robustness-optimization-through-deep-reinforcement-learning-36253'>Bell Labs Internship - Mobility Robustness Optimization through Deep Reinforcement Learning - Nokia Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -179,7 +179,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/haydenai/13012c8f-dc71-479b-bd0c-9a0b3db2553d'>Hayden AI Technologies - Senior Research Scientist - Deep Learning</a></h5> 
+<h5><a href='https://jobs.lever.co/haydenai/13012c8f-dc71-479b-bd0c-9a0b3db2553d'>Hayden AI Technologies - Senior Research Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light">San Francisco  San Francisco, California</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -202,7 +202,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MeeticGroup/743999696341329-stage-data-scientist-deep-learning-computer-vision-h-f'>Meetic Group Stage Data Scientist/ Deep Learning Computer vision H/F | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MeeticGroup/743999696341329-stage-data-scientist-deep-learning-computer-vision-h-f'>Meetic Group Stage Data Scientist/ Deep Learning Computer vision H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -224,11 +224,11 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qT59VfwM&k=Job&j=ojwP9fwx&__jvst=Employee+Referral&__jvsd=syBINgwp&__jvsc=Twitter&bid=n3FMWMwH'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qT59VfwM&k=Job&j=ojwP9fwx&__jvst=Employee+Referral&__jvsd=syBINgwp&__jvsc=Twitter&bid=n3FMWMwH'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light">San Francisco, California  Seattle, Washington</span></p>
 <p>Posted on:: 2019-10-01</p>
 <hr/>
-<h5><a href='https://controlexpert.softgarden.io/job/5034347/Student-gn-f%C3%BCr-Masterarbeit-im-Bereich-Deep-Learning?jobDbPVId=13773137&amp;l=de'>Student (gn) f?r Masterarbeit im Bereich Deep Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://controlexpert.softgarden.io/job/5034347/Student-gn-f%C3%BCr-Masterarbeit-im-Bereich-Deep-Learning?jobDbPVId=13773137&amp;l=de'>Student (gn) f?r Masterarbeit im Bereich Deep Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-01</p>
 <hr/>
@@ -308,7 +308,7 @@ with a?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-23</p>
 <hr/>
-<h5><a href='https://headhonchos.quezx.com/jobs/Manager-Analytics-Deep-Machine-Learning-Iit-nit-iim-isb-xlri-fms-Business-Analytics-Consumer-Durables-Semi-Durables-Gurgaon-1263033'>Hiring For Manager - Analytics - Deep Machine Learning - Iit/nit/iim/isb/xlri/fms in Gurgaon for Exp: 5-10 yrs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://headhonchos.quezx.com/jobs/Manager-Analytics-Deep-Machine-Learning-Iit-nit-iim-isb-xlri-fms-Business-Analytics-Consumer-Durables-Semi-Durables-Gurgaon-1263033'>Hiring For Manager - Analytics - Deep Machine Learning - Iit/nit/iim/isb/xlri/fms in Gurgaon for Exp: 5-10 yrs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-23</p>
 <hr/>
